<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:id="@+id/view_modes">
        <item
            android:id="@+id/nav_agenda"
            android:icon="@android:drawable/ic_menu_agenda"
            android:title="@string/view_agenda" />
        <item
            android:id="@+id/nav_day"
            android:icon="@android:drawable/ic_menu_day"
            android:title="@string/view_day" />
        <item
            android:id="@+id/nav_week"
            android:icon="@android:drawable/ic_menu_week"
            android:title="@string/view_week" />
        <item
            android:id="@+id/nav_month"
            android:icon="@android:drawable/ic_menu_month"
            android:title="@string/view_month" />
        <item
            android:id="@+id/nav_year"
            android:icon="@android:drawable/ic_menu_today"
            android:title="@string/view_year" />
    </group>
</menu>
